# EarthquakeAstrology-2026

./: .gitignore  Aditya-Email_EQ-Paper.docx  README.md  earthquake_aspect_data.csv  earthquake_planet_data.csv  major_us_earthquakes_sample.csv  non_eq_aspect_data.csv  pyproject.toml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-data-pipeline/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
ClaudeIoloadDiles/: AxiomsForEarthquakes.xlsx
VarahaMihiraEQ Originals/: IMG_5199.HEIC  IMG_5200.HEIC  IMG_5202.HEIC  IMG_5206.HEIC  IMG_5207.HEIC
data/ephe/: download_ephe.sh
data/models/: eq_classifier.pkl  eval_report.json  feature_importance.json
data/processed/: feature_columns.json  regional_validation_extended.json
pipeline/data/: ephemeris.py  validate_ephemeris.py
pipeline/features/: __init__.py  engineering.py  regions.py
pipeline/model/: __init__.py  add_regions.py  classifiers.py  export_predictions.py  regional_scoring.py  retrain.py  train_eval.py
references/: BrianJohnston.doc  RulesforEarthqyakes  Saranathan-2.doc  SaranathanJayasree.doc  navamsa-rules
references/VarahaMihiraEQ Originals/: IMG_5162.HEIC  IMG_5201.HEIC  IMG_5203.HEIC  IMG_5204.HEIC  IMG_5205.HEIC  IMG_5208.HEIC
tests/: test_engineering.py  test_model.py  test_regions.py  test_usgs.py  test_validate_ephemeris.py
web/app/: page.tsx
(+17 files in other folders)
