[project]
name = "earthquake-astrology"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pysweph>=2.10.3.6",
    "requests>=2.32",
    "pandas>=2.2",
    "numpy>=2.0",
    "tqdm>=4.0",
    "python-dotenv>=1.0",
    "joblib>=1.4",
    "scikit-learn>=1.8.0",
    "xgboost>=2.0",
    "imbalanced-learn>=0.14.1",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.4",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
